gr-sys/bindings/gr.rs

extern "C" {
    pub fn gr_axeslbl(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: f64,
        arg8: ::core::option::Option<
            unsafe extern "C" fn(arg1: f64, arg2: f64, arg3: *const ::core::ffi::c_char, arg4: f64),
        >,
        arg9: ::core::option::Option<
            unsafe extern "C" fn(arg1: f64, arg2: f64, arg3: *const ::core::ffi::c_char, arg4: f64),
        >,
    );
}
extern "C" {
    pub fn gr_grid(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_grid3d(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: f64,
        arg6: f64,
        arg7: ::core::ffi::c_int,
        arg8: ::core::ffi::c_int,
        arg9: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_verrorbars(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
    );
}
extern "C" {
    pub fn gr_herrorbars(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
    );
}
extern "C" {
    pub fn gr_polyline3d(arg1: ::core::ffi::c_int, arg2: *mut f64, arg3: *mut f64, arg4: *mut f64);
}
extern "C" {
    pub fn gr_polymarker3d(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
    );
}
extern "C" {
    pub fn gr_axes3d(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: f64,
        arg6: f64,
        arg7: ::core::ffi::c_int,
        arg8: ::core::ffi::c_int,
        arg9: ::core::ffi::c_int,
        arg10: f64,
    );
}
extern "C" {
    pub fn gr_titles3d(
        arg1: *mut ::core::ffi::c_char,
        arg2: *mut ::core::ffi::c_char,
        arg3: *mut ::core::ffi::c_char,
    );
}
extern "C" {
    pub fn gr_settitles3d(
        arg1: *mut ::core::ffi::c_char,
        arg2: *mut ::core::ffi::c_char,
        arg3: *mut ::core::ffi::c_char,
    );
}
extern "C" {
    pub fn gr_surface(
        arg1: ::core::ffi::c_int,
        arg2: ::core::ffi::c_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_contour(
        arg1: ::core::ffi::c_int,
        arg2: ::core::ffi::c_int,
        arg3: ::core::ffi::c_int,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_contourf(
        arg1: ::core::ffi::c_int,
        arg2: ::core::ffi::c_int,
        arg3: ::core::ffi::c_int,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_tricontour(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: ::core::ffi::c_int,
        arg6: *mut f64,
    );
}
extern "C" {
    pub fn gr_hexbin(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_hexbin_2pass(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: ::core::ffi::c_int,
        arg5: *const hexbin_2pass_t,
    ) -> *const hexbin_2pass_t;
}
extern "C" {
    pub fn gr_setcolormap(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqcolormap(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setcolormapfromrgb(
        n: ::core::ffi::c_int,
        r: *mut f64,
        g: *mut f64,
        b: *mut f64,
        x: *mut f64,
    );
}
extern "C" {
    pub fn gr_inqcolormapinds(arg1: *mut ::core::ffi::c_int, arg2: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_colorbar();
}
extern "C" {
    pub fn gr_inqcolor(arg1: ::core::ffi::c_int, arg2: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqcolorfromrgb(arg1: f64, arg2: f64, arg3: f64) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_hsvtorgb(h: f64, s: f64, v: f64, r: *mut f64, g: *mut f64, b: *mut f64);
}
extern "C" {
    pub fn gr_tick(arg1: f64, arg2: f64) -> f64;
}
extern "C" {
    pub fn gr_validaterange(arg1: f64, arg2: f64) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_adjustlimits(arg1: *mut f64, arg2: *mut f64);
}
extern "C" {
    pub fn gr_adjustrange(arg1: *mut f64, arg2: *mut f64);
}
extern "C" {
    pub fn gr_beginprint(arg1: *mut ::core::ffi::c_char);
}
extern "C" {
    pub fn gr_beginprintext(
        arg1: *mut ::core::ffi::c_char,
        arg2: *mut ::core::ffi::c_char,
        arg3: *mut ::core::ffi::c_char,
        arg4: *mut ::core::ffi::c_char,
    );
}
extern "C" {
    pub fn gr_endprint();
}
extern "C" {
    pub fn gr_ndctowc(arg1: *mut f64, arg2: *mut f64);
}
extern "C" {
    pub fn gr_wctondc(arg1: *mut f64, arg2: *mut f64);
}
extern "C" {
    pub fn gr_wc3towc(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64);
}
extern "C" {
    pub fn gr_drawrect(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_fillrect(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_drawarc(arg1: f64, arg2: f64, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
}
extern "C" {
    pub fn gr_fillarc(arg1: f64, arg2: f64, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
}
extern "C" {
    pub fn gr_drawpath(
        arg1: ::core::ffi::c_int,
        arg2: *mut vertex_t,
        arg3: *mut ::core::ffi::c_uchar,
        arg4: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_setarrowstyle(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setarrowsize(arg1: f64);
}
extern "C" {
    pub fn gr_drawarrow(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_readimage(
        arg1: *mut ::core::ffi::c_char,
        arg2: *mut ::core::ffi::c_int,
        arg3: *mut ::core::ffi::c_int,
        arg4: *mut *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_drawimage(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
        arg7: *mut ::core::ffi::c_int,
        arg8: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_importgraphics(arg1: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_setshadow(arg1: f64, arg2: f64, arg3: f64);
}
extern "C" {
    pub fn gr_settransparency(arg1: f64);
}
extern "C" {
    pub fn gr_inqtransparency(arg1: *mut f64);
}
extern "C" {
    pub fn gr_setcoordxform(arg1: *mut [f64; 2usize]);
}
extern "C" {
    pub fn gr_begingraphics(arg1: *mut ::core::ffi::c_char);
}
extern "C" {
    pub fn gr_endgraphics();
}
extern "C" {
    pub fn gr_getgraphics() -> *mut ::core::ffi::c_char;
}
extern "C" {
    pub fn gr_drawgraphics(arg1: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_startlistener() -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_mathtex(arg1: f64, arg2: f64, arg3: *mut ::core::ffi::c_char);
}
extern "C" {
    pub fn gr_inqmathtex(
        arg1: f64,
        arg2: f64,
        arg3: *mut ::core::ffi::c_char,
        arg4: *mut f64,
        arg5: *mut f64,
    );
}
extern "C" {
    pub fn gr_beginselection(arg1: ::core::ffi::c_int, arg2: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_endselection();
}
extern "C" {
    pub fn gr_setbboxcallback(
        arg1: ::core::ffi::c_int,
        arg2: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: ::core::ffi::c_int,
                arg2: f64,
                arg3: f64,
                arg4: f64,
                arg5: f64,
            ),
        >,
    );
}
extern "C" {
    pub fn gr_cancelbboxcallback();
}
extern "C" {
    pub fn gr_moveselection(arg1: f64, arg2: f64);
}
extern "C" {
    pub fn gr_resizeselection(arg1: ::core::ffi::c_int, arg2: f64, arg3: f64);
}
extern "C" {
    pub fn gr_inqbbox(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64, arg4: *mut f64);
}
extern "C" {
    pub fn gr_precision() -> f64;
}
extern "C" {
    pub fn gr_text_maxsize() -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_setregenflags(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqregenflags() -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_savestate();
}
extern "C" {
    pub fn gr_restorestate();
}
extern "C" {
    pub fn gr_savecontext(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_selectcontext(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_destroycontext(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_unselectcontext();
}
extern "C" {
    pub fn gr_uselinespec(arg1: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_delaunay(
        arg1: ::core::ffi::c_int,
        arg2: *const f64,
        arg3: *const f64,
        arg4: *mut ::core::ffi::c_int,
        arg5: *mut *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_reducepoints(
        arg1: ::core::ffi::c_int,
        arg2: *const f64,
        arg3: *const f64,
        arg4: ::core::ffi::c_int,
        arg5: *mut f64,
        arg6: *mut f64,
    );
}
extern "C" {
    pub fn gr_trisurface(arg1: ::core::ffi::c_int, arg2: *mut f64, arg3: *mut f64, arg4: *mut f64);
}
extern "C" {
    pub fn gr_gradient(
        arg1: ::core::ffi::c_int,
        arg2: ::core::ffi::c_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut f64,
    );
}
extern "C" {
    pub fn gr_quiver(
        arg1: ::core::ffi::c_int,
        arg2: ::core::ffi::c_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_interp2(
        nx: ::core::ffi::c_int,
        ny: ::core::ffi::c_int,
        x: *const f64,
        y: *const f64,
        z: *const f64,
        nxq: ::core::ffi::c_int,
        nyq: ::core::ffi::c_int,
        xq: *const f64,
        yq: *const f64,
        zq: *mut f64,
        method: ::core::ffi::c_int,
        extrapval: f64,
    );
}
extern "C" {
    pub fn gr_version() -> *const ::core::ffi::c_char;
}
extern "C" {
    pub fn gr_shade(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: ::core::ffi::c_int,
        arg5: ::core::ffi::c_int,
        arg6: *mut f64,
        arg7: ::core::ffi::c_int,
        arg8: ::core::ffi::c_int,
        arg9: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_shadepoints(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: ::core::ffi::c_int,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_shadelines(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: ::core::ffi::c_int,
        arg5: ::core::ffi::c_int,
        arg6: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_panzoom(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut f64,
    );
}
extern "C" {
    pub fn gr_findboundary(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: f64,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: f64, arg2: f64) -> f64>,
        arg6: ::core::ffi::c_int,
        arg7: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gr_setresamplemethod(arg1: ::core::ffi::c_uint);
}
extern "C" {
    pub fn gr_inqresamplemethod(arg1: *mut ::core::ffi::c_uint);
}
